paper_experimental_results/2026-05-11T22-01-24/grok-code-fast-1/combined_programs/pathfinder/sample_002/target.compile.log
error[E0277]: `main` has invalid return type `i32`
  --> benchmark_results/2026-05-11T22-01-24/grok-code-fast-1/combined_programs/pathfinder/sample_002/target.rs:37:14
   |
37 | fn main() -> i32 {
   |              ^^^ `main` can only return types that implement `Termination`
   |
   = help: consider using `()`, or a `Result`

warning: variable does not need to be mutable
  --> benchmark_results/2026-05-11T22-01-24/grok-code-fast-1/combined_programs/pathfinder/sample_002/target.rs:68:9
   |
68 |     let mut goal = Coord {
   |         ----^^^^
   |         |
   |         help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0277`.